--- a/public/styles.css
+++ b/public/styles.css
@@ -10,8 +10,40 @@ main {
 
 img {
   max-width: 100%;
-  /* height: 860px; 设置固定高度 */
-  object-fit: cover; /* 保持图片纵横比 */
+  height: auto;
   display: block;
   margin: 0 auto;
+}
+
+/* 添加新的样式 */
+#main-content {
+  position: relative;
+}
+
+#main-content img.island {
+  z-index: 1;
+}
+
+#main-content img.small-icon {
+  position: absolute;
+  right: 0;
+  width: 90px;
+  height: 90px;
+  z-index: 2;
+}
+
+#main-content img.rivaa {
+  top: 0;
+}
+
+#main-content img.bus {
+  top: 72px; /* 60px (height) + 12px (spacing) */
+}
+
+#main-content img.eat {
+  top: 144px; /* (60px (height) + 12px (spacing)) * 2 */
+}
+
+#main-content img.walk {
+  top: 216px; /* (60px (height) + 12px (spacing)) * 3 */
 }
